--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
  <h3>Google Solution Architect</h3> 
  <h4>Course Content</h4>
   
- <p></p> 
- <p>1.Google Cloud VPC</p>
+  <p></p> 
+  <p>1.Google Cloud VPC</p>
   <p>2.Google Cloud Compute</p>
   <p>3.Google Cloud Load Balancers</p>
   <p>4.Google Cloud Hybrid Connectivity</p> 
- <p>5.Google Kubernetes Engine</p> 
+  <p>5.Google Kubernetes Engine</p>
+  <p>6.Azure Devops</p>
  </body>
